src/parser/statement/snapshots/camello__parser__statement__tests__statements__errors__missing_semicolon_assignment.snap
---
source: src/parser/statement/tests.rs
assertion_line: 88
expression: render_errors(&errors)
---
  × Parse error: Expected ';' after expression statement
   ╭────
 1 │ $x = 1 $y = 2
   ·        ┬
   ·        ╰── here
   ╰────
