src/parser/statement/snapshots/camello__parser__statement__tests__statements__errors__missing_semicolon_print.snap
---
source: src/parser/statement.rs
expression: render_errors(&errors)
---
  × Parse error: Expected ';' after expression statement
   ╭────
 1 │ print(1) print(2)
   ·          ──┬──
   ·            ╰── here
   ╰────
